# Bumpers

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  main.cpp
assets/models/: area_effexts  arena.dae  bumper.blend  bumper.blend1  bumper.dae  bumper.mtl  bunny.mtl  cube.dae  effexts
assets/shaders/: bloom.glsl  blur.glsl  default.glsl  skybox.glsl
assets/shaders/webassembly/: wasm_bloom.glsl  wasm_blur.glsl  wasm_default.glsl  wasm_skybox.glsl
engine/: display.cpp  display.hpp  forward.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  obj_loader.cpp  obj_loader.hpp
engine/assets/: asset_repository.hpp  collada_loader.cpp  collada_loader.hpp  file_asset_repository.cpp  file_asset_repository.hpp  mtl_loader.cpp  mtl_loader.hpp  obj_like_utils.hpp  obj_loader.cpp  obj_loader.hpp  thread_pool.cpp  thread_pool.hpp
engine/graphics/: renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
engine/graphics/gui/: gui_renderer.cpp  gui_renderer.hpp
engine/graphics/mesh/: material.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp
engine/graphics/renderer/: bloom_renderer.cpp  bloom_renderer.hpp  blur_renderer.cpp  blur_renderer.hpp  post_process_renderer.cpp  post_process_renderer.hpp  renderer.cpp  renderer.hpp  sky_box_renderer.cpp  sky_box_renderer.hpp  standard_renderer.cpp  standard_renderer.hpp
engine/graphics/texture/: cube_map_texture.cpp  cube_map_texture.hpp  image_texture.cpp  image_texture.hpp  render_texture.cpp  render_texture.hpp  texture.cpp  texture.hpp
engine/physics/: broad_phase_collision.cpp  broad_phase_collision.hpp  broad_phase_collision_2d.cpp  broad_phase_collision_2d.hpp  collision_resolver.cpp  collision_resolver.hpp  collision_resolver_2d.cpp  collision_resolver_2d.hpp  collision_shape.cpp  collision_shape.hpp  collision_shape_2d.cpp  collision_shape_2d.hpp  collision_shape_utils.cpp  collision_shape_utils.hpp  collision_shape_utils_2d.cpp  collision_shape_utils_2d.hpp
engine/webassembly/: wasm_display.cpp
game/: ai.cpp  ai.hpp  bumper_cars_scene.cpp  bumper_cars_scene.hpp  car_engine.cpp  car_engine.hpp  config.hpp  debug_camera_movement.cpp  debug_camera_movement.hpp  debug_scene.cpp  debug_scene.hpp  free_camera.cpp  free_camera.hpp  in_car_camera.cpp  in_car_camera.hpp  look_at_camera.cpp  look_at_camera.hpp  player_controller.cpp  player_controller.hpp  spin.cpp  spin.hpp
gameobject/: attributes.hpp  camera.hpp  component.hpp  forward.hpp  gameobject.cpp  gameobject.hpp  light.hpp  mesh_render.hpp  scene.hpp  transform.cpp  transform.hpp  world.cpp  world.hpp
gameobject/gui/: button.cpp  button.hpp  control.hpp
gameobject/physics/: box_bounds_3d.cpp  box_bounds_3d.hpp  collider.cpp  collider.hpp  collider_2d.cpp  collider_2d.hpp  physics_body.cpp  physics_body.hpp  physics_body_2d.cpp  physics_body_2d.hpp
tools/: asset_generator.py
web/: index.html
